--- a/css/style.css
+++ b/css/style.css
@@ -4290,7 +4290,8 @@ svg {
 
 @media (max-width: 992px) {
   [class*=__container] {
-    padding: 0 1.8rem;
+    padding-left: 1.8rem;
+    padding-right: 1.8rem;
   }
 
   .tn {
